--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
     rev: 22.12.0
     hooks:
     -   id: black
+        language_version: python3.9
         args:
         - --diff
         - --check
@@ -14,8 +15,8 @@ repos:
         args:
         - --diff
         - --check
-- repo: https://github.com/charliermarsh/ruff-pre-commit
-  # Ruff version.
-  rev: 'v0.0.229'
-  hooks:
-    - id: ruff
+-   repo: https://github.com/charliermarsh/ruff-pre-commit
+    # Ruff version.
+    rev: 'v0.0.229'
+    hooks:
+    -   id: ruff
