--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,15 @@ pre-commit = "^2.21.0"
 icecream = "^2.1.3"
 isort = "^5.11.4"
 
+[tool.isort]
+profile = "black"
+
+[tool.ruff]
+line-length = 99
+
+# Assume Python 3.9.
+target-version = "py39"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
