--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,13 @@ pre-commit = "^2.21.0"
 icecream = "^2.1.3"
 isort = "^5.11.4"
 
+[tool.black]
+line-length = 99
+target-version = ['py39']
+
 [tool.isort]
 profile = "black"
+line_length = 99
 
 [tool.ruff]
 line-length = 99
