--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,18 +9,18 @@ packages = [{include = "samanthas_telegram_bot"}]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-python-telegram-bot = "~20.0"
+python-telegram-bot = "^20.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
 ruff = "^0.0.244"
-pre-commit = "^2.21.0"
+pre-commit = "^3.0.4"
 icecream = "^2.1.3"
 isort = "^5.12.0"
 
 [tool.black]
 line-length = 99
-target-version = ['py39']
+target-version = ['py310']
 
 [tool.isort]
 profile = "black"
@@ -29,8 +29,8 @@ line_length = 99
 [tool.ruff]
 line-length = 99
 
-# Assume Python 3.9.
-target-version = "py39"
+# Assume Python 3.10.
+target-version = "py310"
 
 [build-system]
 requires = ["poetry-core"]
