--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ readme = "README.md"
 packages = [{include = "samanthas_telegram_bot"}]
 
 [tool.poetry.dependencies]
-python = "^3.9"
-python-telegram-bot = "~20.1"
+python = "^3.10"
+python-telegram-bot = "^20.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
@@ -17,6 +17,20 @@ ruff = "^0.0.244"
 pre-commit = "^3.0.4"
 icecream = "^2.1.3"
 isort = "^5.12.0"
+
+[tool.black]
+line-length = 99
+target-version = ['py310']
+
+[tool.isort]
+profile = "black"
+line_length = 99
+
+[tool.ruff]
+line-length = 99
+
+# Assume Python 3.10.
+target-version = "py310"
 
 [build-system]
 requires = ["poetry-core"]
