--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ ruff = "^0.0.262"
 pre-commit = "^3.2.2"
 icecream = "^2.1.3"
 isort = "^5.12.0"
+mypy = "^1.2.0"
 
 [tool.black]
 line-length = 99
@@ -26,6 +27,14 @@ target-version = ['py310']
 [tool.isort]
 profile = "black"
 line_length = 99
+
+[tool.mypy]
+ignore_missing_imports = true
+python_version = "3.10"
+strict = true
+implicit_optional = true
+disallow_untyped_calls = false
+warn_return_any = false
 
 [tool.ruff]
 line-length = 99
