--- a/sample.env
+++ b/sample.env
@@ -1,6 +1,7 @@
 # Rename this file by removing the name and leaving only ".env", then fill in the values
+ADMIN_CHAT_ID=1111
 BOT_TOKEN=1234567:AABBCC_aabbcc
 BOT_OWNER_USERNAME=owner_telegram_username
 SMALLTALK_TOKEN=a1b2c3d4e5f6
-ADMIN_CHAT_ID=1111
 SMALLTALK_TEST_ID=z1y2x3w4v5
+SPEAKING_CLUB_COORDINATOR_USERNAME=some_telegram_username
