--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ packages = [{include = "samanthas_telegram_bot"}]
 python = "^3.10"
 python-telegram-bot = "^20.3"
 phonenumberslite = "^8.13.13"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
@@ -19,6 +20,7 @@ pre-commit = "^3.3.2"
 icecream = "^2.1.3"
 isort = "^5.12.0"
 mypy = "^1.3.0"
+pytest = "^7.3.1"
 
 [tool.black]
 line-length = 99
@@ -35,6 +37,12 @@ strict = true
 implicit_optional = true
 disallow_untyped_calls = false
 warn_return_any = false
+
+[[tool.mypy.overrides]]
+module = [
+  "tests.*"
+]
+ignore_errors = true
 
 [tool.ruff]
 line-length = 99
