feat: set up a webhook for Telegram updates (#67)
allow to run bot in webhook mode (long polling can be kept for local development)
This will allow to listen to updates from Telegram as well as (in future PRs)
to updates from other services such as Chatwoot

--- a/sample.env
+++ b/sample.env
@@ -1,8 +1,11 @@
 # Rename this file by removing the name and leaving only ".env", then fill in the values
 ADMIN_CHAT_ID=1111
+# long_polling or webhook
+BOT_RUN_MODE=long_polling
 BOT_TOKEN=1234567:AABBCC_aabbcc
 BOT_OWNER_USERNAME=owner_telegram_username
 LOGGING_LEVEL=INFO
 SMALLTALK_TOKEN=a1b2c3d4e5f6
 SMALLTALK_TEST_ID=z1y2x3w4v5
 SPEAKING_CLUB_COORDINATOR_USERNAME=some_telegram_username
+TELEGRAM_WEBHOOK_SECRET_TOKEN=telegram_webhook_1234567SomeToken
