--- a/sample.env
+++ b/sample.env
@@ -2,6 +2,9 @@
 ADMIN_CHAT_ID=1111
 BOT_TOKEN=1234567:AABBCC_aabbcc
 BOT_OWNER_USERNAME=owner_telegram_username
+CHATWOOT_ACCOUNT_ID=0
+CHATWOOT_API_TOKEN=abcde1235fghij
+CHATWOOT_INBOX_ID=0
 LOGGING_LEVEL=INFO
 SMALLTALK_TOKEN=a1b2c3d4e5f6
 SMALLTALK_TEST_ID=z1y2x3w4v5
