move all URL prefixes to envvars

--- a/sample.env
+++ b/sample.env
@@ -1,9 +1,10 @@
 # Rename this file by removing the name and leaving only ".env", then fill in the values
 ADMIN_CHAT_ID=1111
+BACKEND_API_URL_PREFIX=https://domain.tld
 BOT_TOKEN=1234567:AABBCC_aabbcc
 BOT_OWNER_USERNAME=owner_telegram_username
-CHATWOOT_ACCOUNT_ID=0
 CHATWOOT_API_TOKEN=abcde1235fghij
+CHATWOOT_API_URL_PREFIX=https://domain.tld
 CHATWOOT_INBOX_ID=0
 LOGGING_LEVEL=INFO
 SMALLTALK_TOKEN=a1b2c3d4e5f6
