--- a/sample.env
+++ b/sample.env
@@ -9,6 +9,7 @@ CHATWOOT_INBOX_ID=0
 LOGGING_LEVEL=INFO
 SMALLTALK_TOKEN=a1b2c3d4e5f6
 SMALLTALK_TEST_ID=z1y2x3w4v5
+SMALLTALK_URL_PREFIX=https://domain.tld
 SPEAKING_CLUB_COORDINATOR_USERNAME=some_telegram_username
 TELEGRAM_WEBHOOK_SECRET_TOKEN=telegram_webhook_1234567SomeToken
 WEBHOOK_URL_PREFIX=https://domain.tld
