--- a/sample.env
+++ b/sample.env
@@ -1,11 +1,17 @@
 # Rename this file by removing the name and leaving only ".env", then fill in the values
 ADMIN_CHAT_ID=1111
-# long_polling or webhook
-BOT_RUN_MODE=long_polling
+BACKEND_API_URL_PREFIX=https://domain.tld
 BOT_TOKEN=1234567:AABBCC_aabbcc
 BOT_OWNER_USERNAME=owner_telegram_username
+CHATWOOT_API_TOKEN=abcde1235fghij
+CHATWOOT_API_URL_PREFIX=https://domain.tld
+CHATWOOT_INBOX_ID=0
 LOGGING_LEVEL=INFO
 SMALLTALK_TOKEN=a1b2c3d4e5f6
 SMALLTALK_TEST_ID=z1y2x3w4v5
+SMALLTALK_URL_PREFIX=https://domain.tld
 SPEAKING_CLUB_COORDINATOR_USERNAME=some_telegram_username
 TELEGRAM_WEBHOOK_SECRET_TOKEN=telegram_webhook_1234567SomeToken
+WEBHOOK_URL_PREFIX=https://domain.tld
+WEBHOOK_PATH_FOR_CHATWOOT=relative-path-1
+WEBHOOK_PATH_FOR_TELEGRAM=relative-path-2
