add bot admin's username to help and fallback messages (#128)
closes #113 
+ add type hints to "locale"

--- a/sample.env
+++ b/sample.env
@@ -3,6 +3,7 @@ ADMIN_CHAT_ID=1111
 BACKEND_API_URL_PREFIX=https://domain.tld
 BOT_TOKEN=1234567:AABBCC_aabbcc
 BOT_OWNER_USERNAME=owner_telegram_username
+BOT_TECH_SUPPORT_USERNAME=tech_support_telegram_username
 CHATWOOT_API_TOKEN=abcde1235fghij
 CHATWOOT_API_URL_PREFIX=https://domain.tld
 CHATWOOT_INBOX_ID=0
