--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,28 +1,31 @@
-[tool.poetry]
+[project]
+authors = [
+    {name = "Dmitry Kolomatskiy", email = "58207913+lemontree210@users.noreply.github.com"},
+]
+license = {text = "GPL-3.0-only"}
+requires-python = "<3.11, >=3.10"
+dependencies = [
+    "python-telegram-bot[webhooks]<22.0,>=21.4",
+    "phonenumberslite<9.0.0,>=8.13.42",
+    "python-dotenv<2.0.0,>=1.0.1",
+    "uvicorn<1.0.0,>=0.30.5",
+    "starlette<1.0.0,>=0.38.2",
+]
 name = "samanthas-telegram-bot"
 version = "0.1.0"
 description = "Telegram bot(s) for Samanthas Group"
-authors = ["Dmitry Kolomatskiy <58207913+lemontree210@users.noreply.github.com>"]
-license = "GPL-3.0-only"
 readme = "README.md"
-packages = [{include = "samanthas_telegram_bot"}]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-python-telegram-bot = {extras = ["webhooks"], version = "^21.4"}
-phonenumberslite = "^8.13.42"
-python-dotenv = "^1.0.1"
-uvicorn = "^0.30.5"
-starlette = "^0.38.2"
-
-[tool.poetry.group.dev.dependencies]
-black = "^24.4.2"
-ruff = "^0.5.5"
-pre-commit = "^3.8.0"
-icecream = "^2.1.3"
-isort = "^5.13.2"
-mypy = "^1.11.1"
-pytest = "^8.3.2"
+[dependency-groups]
+dev = [
+    "black<25.0.0,>=24.4.2",
+    "ruff<1.0.0,>=0.5.5",
+    "pre-commit<4.0.0,>=3.8.0",
+    "icecream<3.0.0,>=2.1.3",
+    "isort<6.0.0,>=5.13.2",
+    "mypy<2.0.0,>=1.11.1",
+    "pytest<9.0.0,>=8.3.2",
+]
 
 [tool.black]
 line-length = 99
@@ -52,6 +55,23 @@ line-length = 99
 # Assume Python 3.10.
 target-version = "py310"
 
+[tool.pdm.dev-dependencies]
+dev = [
+    "black<25.0.0,>=24.4.2",
+    "ruff<1.0.0,>=0.5.5",
+    "pre-commit<4.0.0,>=3.8.0",
+    "icecream<3.0.0,>=2.1.3",
+    "isort<6.0.0,>=5.13.2",
+    "mypy<2.0.0,>=1.11.1",
+    "pytest<9.0.0,>=8.3.2",
+]
+
+[tool.pdm.build]
+includes = [
+    "samanthas_telegram_bot",
+]
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["pdm-backend"]
+build-backend = "pdm.backend"
+
+
